# ai-trace-cli

./: .gitignore  README.md  build.sh  bun.lockb  index.html  package.json  vite.config.ts
client/: pyproject.toml
client/ai_trace/assets/: index.html
client/research_crew/ai_trace/: trace_crewai.py
client/tests/: agent_1.py
public/data/: workflow.json
src/components/workflow/: AgentNode.tsx  AgentWorkflow.tsx  ExecutionNode.tsx  InputNode.tsx  TaskNode.tsx  ToolNode.tsx  WorkflowPage.tsx
src/pages/: Index.tsx
src/styles/: workflow.css
src/types/: global.d.ts
